# motion

./: .gitignore  README.md
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/launch/: trajectory_generator.launch
trajectory_generator/scripts/path/: spiral_equations.csv  spiral_equations.py  spiral_symbolic.py  spline.py
trajectory_generator/scripts/vel/: vel_profile.py
trajectory_generator/src/: main.cpp
