<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.1</version>
  <description>A trajectory generator for path and velocity profiles</description>
  <maintainer email="droemer7@gmail.com">Dane</maintainer>
  <author email="droemer7@gmail.com">Dane</author>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>lbfgsb</depend>
  <depend>std_msgs</depend>
</package>
